# pycms

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: SECURITY.md  architecture.md  parity_matrix.md  threat_model.md  wondercms_analysis.md
plugins/ai_placeholder/: plugin.json  plugin.py
plugins/example_hello/: plugin.json  plugin.py
pressassist/: __init__.py  cli.py  main.py
pressassist/admin/: __init__.py  blog_routes.py  routes.py  user_routes.py
pressassist/admin/static/css/: admin-common.css
pressassist/admin/static/css/wysiwyg/: editor-decoupled.css  editor-rtl.css  editor-theme.css
pressassist/admin/static/js/wysiwyg/: decoupled-init.js  image-upload.js
pressassist/core/: __init__.py  access_middleware.py  audit_log.py  auth.py  blog_models.py  config.py  csrf.py  dependencies.py  email_service.py  hooks.py  i18n.py  language_middleware.py  languages.py  logging.py  models.py  plugins.py  sanitize.py  schemas.py  security_headers.py  session_store.py  storage.py  themes.py  updater.py
pressassist/frontend/: __init__.py  auth_routes.py  blog_routes.py  profile_routes.py  search_routes.py
pressassist/locales/: en.json  fa.json
tests/: __init__.py  test_auth.py  test_csrf.py  test_sanitize.py  test_uploads.py
themes/default/: theme.json
themes/default/static/css/: blog.css  rtl.css  style.css  template-dark.css  template-light.css  template-mixed.css
themes/default/static/js/: jump-to-top.js  search.js
themes/default/templates/: 404.html  base.html  page-dark.html  page-light.html  page-mixed.html  page.html  profile.html
